--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ html, body {
     box-shadow: 0px 5px 0px 0px #dbdada;
   }
 
-  ::-webkit-progress-value {
+  ::-webkit-progress-bar {
     background-color: #3aadd8;
     border-radius: 25px;
   }
