--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
   
 
 html, body {
-    font-family: Arial, Helvetica, sans-serif;
-    overflow: hidden;
+    font-family: din-round,sans-serif;
+    overflow-y: auto;
     background-color: var(--light);
     height: 100%;
   }
@@ -41,9 +41,16 @@ html, body {
     height: 100%;
     max-height: 428px;
     perspective: min(900px, 50%);
-    
-  
   }
+
+  .controls {
+    background-color: transparent;
+    max-width: 814px;
+    height: 100%;
+    max-height: 1000px;
+    perspective: min(900px, 50%);
+  }
+
 
   input[type="file"] {
     display: none;
@@ -173,7 +180,6 @@ html, body {
   
   .slider {
     left: 0;
-    overflow: hidden;
     width: 100%; /* Occupy the full available width */
     max-width: 814px; /* Limit the width to 600 pixels */
     display: flex;
@@ -184,7 +190,6 @@ html, body {
 
   .slider2 {
     left: 0;
-    overflow: hidden;
     width: 100%; /* Occupy the full available width */
     max-width: 814px; /* Limit the width to 600 pixels */
     height: auto;
@@ -228,7 +233,6 @@ html, body {
     align-items: center; /* Center items vertically */
     background: white;
     border-radius: 25px;
-    overflow: hidden;
     padding: 10px;
     box-sizing: border-box;
     margin: 0; /* Ensure no margin is affecting the size */
