--- a/style.css
+++ b/style.css
@@ -100,15 +100,18 @@ html, body {
     background-color: white;
     box-shadow: 0px 5px 0px 0px #e5e5e5;
   }
-
-  .white:hover {
-    filter: brightness(0.9);
+  @media (hover: hover) {
+    .white:hover {
+      filter: brightness(0.9);
+    }
   }
 
-  .white:active {
-    background-color: white;
-    box-shadow: none;
-    transform: translate(0, 5px);
+  @media (hover: none) {
+    .white:active {
+      background-color: white;
+      box-shadow: none;
+      transform: translate(0, 5px);
+    }
   }
 
   .blue {
