--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ html, body {
     border-width: 3px;
     user-select: none;
     margin: auto;
+    padding: 15px;
 
     color: var(--dark);
     width: 100%;
