--- a/style.css
+++ b/style.css
@@ -6,9 +6,12 @@
 
 html, body {
     font-family: din-round,sans-serif;
-    overflow-y: auto;
+    overflow-y:hidden;
     background-color: var(--light);
     height: 100%;
+
+    padding-left: 12px;
+    padding-right: 12px;
   }
   
   @keyframes slidein {
@@ -63,7 +66,7 @@ html, body {
     user-select: none;
 
     color: var(--dark);
-    padding: 15px 32px;
+    padding: 15px 15px 15px 15px;
     width: 25%;
     text-align: center;
     text-decoration: none;
@@ -82,9 +85,9 @@ html, body {
     border-width: 3px;
     user-select: none;
     margin: auto;
-    padding: 15px;
 
     color: var(--dark);
+    padding: 15px 15px 15px 15px;
     width: 100%;
     text-align: center;
     text-decoration: none;
@@ -100,24 +103,10 @@ html, body {
     background-color: white;
     box-shadow: 0px 5px 0px 0px #e5e5e5;
   }
-  @media (hover: hover) {
-    .white:hover {
-      filter: brightness(0.9);
-    }
-  }
 
-  @media (hover: none) {
-    .white:active {
-      background-color: white;
-      box-shadow: none;
-      transform: translate(0, 5px);
-    }
-  }
-  
   .white:hover {
     filter: brightness(0.9);
   }
-  
 
   .white:active {
     background-color: white;
@@ -304,7 +293,7 @@ html, body {
     height: 100%; /* Full height of viewport */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-    padding-top: 5%;
+    padding-top: 3%;
   }
 
   /* Modal Content */
@@ -312,7 +301,7 @@ html, body {
       background-color: #fefefe;
       margin: auto;
       border: 1px solid #888;
-      width: 50%;
+      width: 90%;
       height: 80%;
   }
   
@@ -323,13 +312,23 @@ html, body {
     font-size: 50px;
     font-weight: bold;
     padding-right: 3%;
+    cursor: pointer;
+    user-select: none;
   }
   
   .close:hover,
+  .close:active,
   .close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
+  }
+
+  table {
+    font-family: din-round,sans-serif;
+    border-collapse: collapse;
+    width: 80%;
+    padding: 12px;
   }
 
   @media only screen and (max-width: 600px) {
@@ -337,16 +336,42 @@ html, body {
     .modal-content {
       background-color: #fefefe;
       margin: auto;
-      padding: 10px;
+      padding-left: 8px;
+      padding-right: 8px;
       border: 1px solid #888;
       width: 100%;
+      height: 100%;
+      box-sizing: border-box;
     }
-  }
 
-  table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 85%;
+    .modal {
+      padding-top: 0%;
+    }
+
+    .modal h1 {
+      max-width: 75%;
+      padding-bottom: 0;
+      margin-bottom: 0;
+    }
+
+    table {
+      font-family: din-round,sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+      padding: 12px;
+    }
+
+    .flip-card {
+      background-color: transparent;
+      max-width: 814px;
+      height: 100%;
+      max-height: 328px;
+      perspective: min(900px, 50%);
+    }
+
+    #title {
+      font-size: 25px;
+    }
   }
   
   td, th {
